@@ -28,7 +28,6 @@ import org.bukkit.entity.Entity;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Hoglin;
 import org.bukkit.entity.Piglin;
-import org.bukkit.util.BoundingBox;
 import org.bukkit.util.Vector;
 
 import com.google.common.base.Enums;
@@ -367,9 +366,7 @@ public class BiomeRecipe implements Comparable<BiomeRecipe> {
                             .getManager()
                             .getMap()
                             .getGreenhouse(b.getLocation()).map(gh -> {
-                                BoundingBox interior = gh.getBoundingBox().clone();
-                                interior.expand(-1, -1, -1);
-                                if (!interior.contains(entity.getBoundingBox())) {
+                                if (!gh.getInternalBoundingBox().contains(entity.getBoundingBox())) {
                                     entity.remove();
                                     return false;
                                 }
@@ -422,7 +419,7 @@ public class BiomeRecipe implements Comparable<BiomeRecipe> {
      * @return a list of blocks that are required for this recipe
      */
     public List<String> getRecipeBlocks() {
-        return requiredBlocks.entrySet().stream().map(en -> Util.prettifyText(en.getKey().toString()) + " x " + en.getValue()).collect(Collectors.toList());
+        return requiredBlocks.entrySet().stream().map(en -> Util.prettifyText(en.getKey().toString()) + " x " + en.getValue()).toList();
     }
 
     /**
@@ -474,10 +471,10 @@ public class BiomeRecipe implements Comparable<BiomeRecipe> {
 
     private boolean canGrowOn(GrowthBlock block, GreenhousePlant p) {
         // Ceiling plants can only grow on ceiling blocks
-        if (CEILING_PLANTS.contains(p.plantMaterial()) && block.floor()) {
+        if (CEILING_PLANTS.contains(p.plantMaterial()) && Boolean.TRUE.equals(block.floor())) {
             return false;
         }
-        return p.plantGrownOn().equals(block.block().getRelative(block.floor() ? BlockFace.DOWN : BlockFace.UP).getType());
+        return p.plantGrownOn().equals(block.block().getRelative(Boolean.TRUE.equals(block.floor()) ? BlockFace.DOWN : BlockFace.UP).getType());
     }
 
     /**
